# sensormanager-client

./: README.md  setup.cfg
sensormanagerclient/: __init__.py  sensormanagerclient.py
